--- a/Task_1/Task_1.csproj
+++ b/Task_1/Task_1.csproj
@@ -43,28 +43,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cars\FuelCar.cs" />
-    <Compile Include="Cars\ElectricCarBuilder.cs" />
-    <Compile Include="Cars\FuelCarBuilder.cs" />
-    <Compile Include="Cars\Car.cs" />
-    <Compile Include="Cars\CarBuilder.cs" />
-    <Compile Include="Cars\Enums\FuelType.cs" />
-    <Compile Include="Cars\HybridCar.cs" />
-    <Compile Include="Cars\Enums\Manufacturer.cs" />
-    <Compile Include="Cars\Enums\TransmissionType.cs" />
-    <Compile Include="Cars\Enums\BodyType.cs" />
-    <Compile Include="Cars\ElectricCar.cs" />
-    <Compile Include="Cars\DieselCar.cs" />
-    <Compile Include="Cars\Interfases\ICarList.cs" />
-    <Compile Include="Cars\Interfases\IElectric.cs" />
-    <Compile Include="Cars\Interfases\IElement.cs" />
-    <Compile Include="Cars\Interfases\IFuel.cs" />
-    <Compile Include="Cars\Interfases\ILoadingCapacity.cs" />
-    <Compile Include="Cars\Interfases\IPassenger.cs" />
-    <Compile Include="Cars\Interfases\ITaksoParkStorage.cs" />
-    <Compile Include="Cars\PetrolCar.cs" />
-    <Compile Include="Cars\GasCar.cs" />
-    <Compile Include="Cars\TaksoParkStorage.cs" />
+    <Compile Include="Cars\ConcreteCar\Bus.cs" />
+    <Compile Include="Cars\CarBuilders\CarBuilders.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\FuelCar.cs" />
+    <Compile Include="Cars\CarBuilders\ElectricCarBuilder.cs" />
+    <Compile Include="Cars\CarBuilders\FuelCarBuilder.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\Car.cs" />
+    <Compile Include="Cars\CarBuilders\CarBuilder.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\Enums\FuelType.cs" />
+    <Compile Include="Cars\CarTypesFor\HybridCar.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\Enums\Manufacturer.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\Enums\TransmissionType.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\Enums\BodyType.cs" />
+    <Compile Include="Cars\CarTypesFor\ElectricCar.cs" />
+    <Compile Include="Cars\CarTypesFor\DieselCar.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\ICarList.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\IElectric.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\IElement.cs" />
+    <Compile Include="Cars\CarTypesFor\Base\IFuel.cs" />
+    <Compile Include="Cars\ConcreteCar\IPassenger.cs" />
+    <Compile Include="Cars\TaksoPark\ITaksoParkStorage.cs" />
+    <Compile Include="Cars\CarTypesFor\PetrolCar.cs" />
+    <Compile Include="Cars\CarTypesFor\GasCar.cs" />
+    <Compile Include="Cars\TaksoPark\TaksoParkStorage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
